# cookiecutter-monarch-ingest

./: .gitignore  CONTRIBUTING.md  MIGRATION_GUIDE.md  README.md  cookiecutter.json  copier.yaml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
includes/: slugify.jinja
licenses/: BSD-3-Clause
template/: .editorconfig  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md.jinja  CONTRIBUTING.md.jinja  LICENSE.jinja  MIGRATION_FROM_CRUFT.md  README.md.jinja  justfile.jinja  mkdocs.yaml  mkdocs.yml.jinja  mypy.ini  project.justfile.jinja  pyproject.toml.jinja  pytest.ini  {{_copier_conf.answers_file}}.jinja
template/.github/: ai-controllers.json  dependabot.yml
template/.github/workflows/: ai.yml  create-release.yaml  main.yaml
template/scripts/: generate-rdf.py  generate-report.py  get-latest-report.py
template/src/{{project_slug}}/: __init__.py  _version.py  cli.py  download.yaml  transform.py  transform.yaml
template/tests/: test_transform.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  Makefile  README.md  mkdocs.yaml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: create-release.yaml  deploy-docs.yaml  deploy-docs.yml  test.yaml  update-docs.yaml
{{cookiecutter.project_name}}/data/: example_data.tsv
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/scripts/: generate-rdf.py  generate-report.py  generate-report.sh  get-latest-report.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: cli.py  download.yaml  metadata.yaml  transform.py  transform.yaml
{{cookiecutter.project_name}}/tests/: test_example.py
