[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_name}}"
authors = ["{{cookiecutter.__author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.min_python_version}}"
importlib-metadata = ">=4.8.0"
koza = ">=0.5.4"
kgx = { git = "https://github.com/biolink/kgx", branch = "master" }                   # ">=2.1"
biolink-model = { git = "https://github.com/biolink/biolink-model", rev = "dc87efc" } # "^4.1.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = { version = ">=7.1.2" }
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
black = "^23.10.0"
ruff = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.__project_slug}}.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line_length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120
extend-ignore = [
    "D211", # `no-blank-line-before-class`
    "D212", # `multi-line-summary-first-line`
    "D203", # `blank-line-before-docstring`
    "F541", # f-strings with no placeholders
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Select or ignore from https://beta.ruff.rs/docs/rules/
select = [
    "B", # bugbear
    "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # Pyflakes
    "I", # isort
    "S", # flake8-bandit
    "W", # Warning
]
unfixable = []
target-version = "py310"

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
# ignore-words-list = ""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
