[project]
name = "{{cookiecutter.__project_slug}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
license = {text = "{{cookiecutter.license}}"}
readme = "README.md"
requires-python = ">={{cookiecutter.min_python_version}}"
dependencies = [
    "importlib-metadata>=4.8.0",
    "koza>=2.0.0",
    "kghub-downloader>=0.3.11",
    "kgx>=2.4.0",
    "biolink-model>=4.2.0",
    "duckdb>=0.10.2",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "mkdocs>=1.4",
    "mkdocstrings[python]>=0.26.2",
    "mkdocs-material>=9.5",
    "mkdocs-macros-plugin",
    "black",
    "ruff",
]

[project.scripts]
ingest = "{{cookiecutter.__project_slug}}.cli:app"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120
ignore = [
    "D100", # `missing-module-docstring`
    "D101", # `missing-function-docstring`
    "D102", # `missing-method-docstring`
    "D103", # `missing-class-docstring`
    "D211", # `no-blank-line-before-class`
    "D212", # `multi-line-summary-first-line`
    "D203", # `blank-line-before-docstring`
    "F541", # f-strings with no placeholders
    "S101", # Use of assert detected
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Select or ignore from https://beta.ruff.rs/docs/rules/
select = [
    "B", # bugbear
    "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # Pyflakes
    "I", # isort
    "S", # flake8-bandit
    "W", # Warning
]
unfixable = []
target-version = "py310"

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
# ignore-words-list = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
